--- a/pom.xml
+++ b/pom.xml
@@ -3,4 +3,17 @@
   <groupId>org.jago.sassy-maven</groupId>
   <artifactId>sassy-maven</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  
+  <dependencies>
+  	<dependency>
+  		<groupId>com.cathive.sass</groupId>
+  		<artifactId>sass-java</artifactId>
+  		<version>4.0.0</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>junit</groupId>
+  		<artifactId>junit</artifactId>
+  		<version>4.12</version>
+  	</dependency>
+  </dependencies>
 </project>
